--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
                     </a>
                     <p> These sketches show a rough draft of how a website using our problem statement could be used. (Based somewhat off of reddit)  </p>
                     </section>
-        
+                        <!--Paper Prototype Assignment-->
+                        <section class="project">
+                        <a href="files/Prototypes.pdf">
+                            <h3> Prototype</h3>
+                        </a>    
+                        <a href="files/Prototypes.pdf">
+                        <img src="images/Prototype.jpeg">
+                        </a>
+                        <p> Brief description of your prototype </p>
+                        </section>
+    
         <h2>Contact me</h2>
         <div class="contact"></div>
 
