--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a href="files/Prototypes.pdf">
                         <img src="images/Prototype.jpeg">
                         </a>
-                        <p> Brief description of your prototype </p>
+                        <p> We created a prototype of our app by creating screens our users could encounter while interacting with our app. </p>
                         </section>
     
         <h2>Contact me</h2>
