--- a/index.html
+++ b/index.html
@@ -57,7 +57,15 @@
                         </a>
                         <p> We created a prototype of our app by creating screens our users could encounter while interacting with our app. </p>
                         </section>
-                       
+                        <section class="project">
+                            <a href="https://github.com/CS-AndrewMagarelli/cse145">
+                            <h3>Algorithmic Design Projects</h3>
+                            </a>
+                            <a href="https://github.com/CS-AndrewMagarelli/cse145">
+                            <img src="images/Screenshot 2024-09-19 144048.png">
+                            </a>
+                            <p>Java code from projects and assignments in class.</p>
+                        </section>
     
         <h2>Contact me</h2>
         <div class="contact"></div>
